@@ -68,15 +68,15 @@ public class PivotRowHandler {
                                        // the number of nonaugmentation columns
 
     // Initialize the "remaining rows" as just those that are pivot rows in the matrix.
-    remainingRows = new Vector<Integer>(m);
+    remainingRows = new Vector<>(m);
     for (int i = 0; i < m; i++) {
       if (mat.isPivotRow(i)) {
-        remainingRows.add(new Integer(i));
+        remainingRows.add(Integer.valueOf(i));
       }
     }
     // Make a copy, which we will NOT alter as we proceed.
     // This serves to say which rows were pivot rows when we began.
-    pivotRows = new Vector<Integer>(remainingRows);
+    pivotRows = new Vector<>(remainingRows);
 
     codes = buildCodes();
     computeUnblockedColumns();
@@ -96,8 +96,8 @@ public class PivotRowHandler {
     // Compute absolutely and conditionally unblocked columns.
     // A column is absolutely unblocked if it contains only 0's and 3's.
     // A column is conditionally unblocked if it contains only 0's, 2's, and 3's.
-    Vector<Integer> auv = new Vector<Integer>();
-    Vector<Integer> cuv = new Vector<Integer>();
+    Vector<Integer> auv = new Vector<>();
+    Vector<Integer> cuv = new Vector<>();
     for (int j = 0; j < augStart; j++) {
       boolean absolute = true;
       boolean conditional = true;
@@ -106,15 +106,14 @@ public class PivotRowHandler {
           absolute = false;
           conditional = false;
           break;
-        }
-        else if (codes[i][j] == 2) {
+        } else if (codes[i][j] == 2) {
           absolute = false;
         }
       }
       if (absolute) {
-        auv.add(new Integer(j));
+        auv.add(Integer.valueOf(j));
       } else if (conditional) {
-        cuv.add(new Integer(j));
+        cuv.add(Integer.valueOf(j));
       }
     }
     AU = auv;
@@ -123,8 +122,8 @@ public class PivotRowHandler {
   /*
   private List<List<Integer>> computeUnblockedColumns() {
     // Compute absolutely and conditionally unblocked columns.
-    Vector<Integer> auv = new Vector<Integer>();
-    Vector<Integer> cuv = new Vector<Integer>();
+    Vector<Integer> auv = new Vector<>();
+    Vector<Integer> cuv = new Vector<>();
     for (int j = 0; j < augStart; j++) {
       boolean absolute = true;
       boolean conditional = true;
@@ -133,19 +132,18 @@ public class PivotRowHandler {
           absolute = false;
           conditional = false;
           break;
-        }
-        else if (codes[i][j] == 2) {
+        } else if (codes[i][j] == 2) {
           absolute = false;
         }
       }
       if (absolute) {
-        auv.add(new Integer(j));
+        auv.add(Integer.valueOf(j));
       } else if (conditional) {
-        cuv.add(new Integer(j));
+        cuv.add(Integer.valueOf(j));
       }
     }
     // Return.
-    List<List<Integer>> u = new Vector<List<Integer>>();
+    List<List<Integer>> u = new Vector<>();
     u.add(auv);
     u.add(cuv);
     return u;
@@ -168,16 +166,13 @@ public class PivotRowHandler {
         if (!f.isConstant()) {
           // f is variable
           codes[i][j] = 2;
-        }
-        else if (f.isZero()) {
+        } else if (f.isZero()) {
           // f is identically zero
           codes[i][j] = 0;
-        }
-        else if (f.isPositive()) {
+        } else if (f.isPositive()) {
           // f is a positive constant
           codes[i][j] = 1;
-        }
-        else {
+        } else {
           // f is a negative constant
           codes[i][j] = 3;
         }
@@ -193,7 +188,7 @@ public class PivotRowHandler {
     // Initialize subset of assumptions that will be used in all sets.
     AssumptionSet base = new AssumptionSet();
     // Make the first pass:
-    base.addAll( firstPass() );
+    base.addAll(firstPass());
     // Second pass, if needed:
     Set<AssumptionSet> asetset;
     if (remainingRows.size() > 0) {
@@ -203,7 +198,7 @@ public class PivotRowHandler {
       }
       asetset = secondPassOptions;
     } else {
-      asetset = new HashSet<AssumptionSet>();
+      asetset = new HashSet<>();
       asetset.add(base);
     }
     return asetset;
@@ -281,22 +276,20 @@ public class PivotRowHandler {
 
   private AssumptionSet firstPass() throws MatrixSolvingFailedException {
     AssumptionSet aset = new AssumptionSet();
-    Vector<Integer> discard = new Vector<Integer>();
+    Vector<Integer> discard = new Vector<>();
     logger.log(Level.ALL, "Processing pivot rows:\n",remainingRows);
     for (Integer r : remainingRows) {
       if (FAar01(r)) {
         // If every augmentation entry in row r is of code 0 or 1, then we need not worry about
         // row r at all.
-        logger.log(Level.ALL,"Discarding row",r,": all augmentation entries nonnegative constants.");
+        logger.log(Level.ALL, "Discarding row",r,": all augmentation entries nonnegative constants.");
         discard.add(r);
-      }
-      else if (EXpr3AU(r)) {
+      } else if (EXpr3AU(r)) {
         // If row r has a post-pivot entry that is of code 3 and in an absolutely unblocked column,
         // then again we do not need to worry about row r at all.
-        logger.log(Level.ALL,"Discarding row",r,": contains a negative constant in an absolutely unblocked column.");
+        logger.log(Level.ALL, "Discarding row",r,": contains a negative constant in an absolutely unblocked column.");
         discard.add(r);
-      }
-      else if (FApr01(r)) {
+      } else if (FApr01(r)) {
         // Suppose all post-pivot entries are of code 0 or 1.
         if (EXar3(r)) {
           // If in addition there is an aug entry of code 3, then we have a complete fail.
@@ -309,12 +302,12 @@ public class PivotRowHandler {
           // Else all aug entries are of codes 0, 1, 2, and the only hope for this row is that
           // all entries of code 2 be nonnegative.
           AssumptionSet nonneg = ar2nonneg(r);
-          aset.addAll( nonneg );
+          aset.addAll(nonneg);
           discard.add(r);
           logger.log(Level.ALL, "Discarding row",r,", and adding assumptions:",
               "all post-pivot entries are nonnegative constants, but no augmentation entries are negative",
               "constants. Therefore we add assumptions that all variable augmentation entries in row",
-              r,"be nonnegative. Assumptions added:","\n"+nonneg.toString());
+              r, "be nonnegative. Assumptions added:","\n"+nonneg.toString());
         }
       }
     }
@@ -323,7 +316,7 @@ public class PivotRowHandler {
   }
 
   public void firstPass(AssumptionManager amgr) throws BadAssumptionsException {
-    Vector<Integer> discard = new Vector<Integer>();
+    Vector<Integer> discard = new Vector<>();
     logger.log(Level.ALL, "Processing pivot rows:\n",remainingRows,"\nfor matrix:","\n"+mat.toString());
     for (Integer r : remainingRows) {
       if (FAar01(r) && FApr03(r)) {
@@ -332,17 +325,15 @@ public class PivotRowHandler {
         // So if there are any 1's or 2's among the postpivots, then we might still need to use one of
         // them during the third pass. So we rule this row out right now only if in addition there
         // are no 1's or 2's among the postpivots.
-        logger.log(Level.ALL,"Discarding row",r,": all augmentation entries nonnegative constants,",
+        logger.log(Level.ALL, "Discarding row",r,": all augmentation entries nonnegative constants,",
             "and all postpivots are nonpositive constants.");
         discard.add(r);
-      }
-      else if (EXpr3AU(r)) {
+      } else if (EXpr3AU(r)) {
         // If row r has a post-pivot entry that is of code 3 and in an absolutely unblocked column,
         // then again we do not need to worry about row r at all.
-        logger.log(Level.ALL,"Discarding row",r,": contains a negative constant in an absolutely unblocked column.");
+        logger.log(Level.ALL, "Discarding row",r,": contains a negative constant in an absolutely unblocked column.");
         discard.add(r);
-      }
-      else if (FApr01(r)) {
+      } else if (FApr01(r)) {
         // Suppose all post-pivot entries are of code 0 or 1.
         if (EXar3(r)) {
           // If in addition there is an aug entry of code 3, then we have a complete fail.
@@ -364,15 +355,15 @@ public class PivotRowHandler {
           logger.log(Level.ALL, "Discarding row",r,", and adding assumptions:",
               "all post-pivot entries are nonnegative constants, but no augmentation entries are negative",
               "constants. Therefore we add assumptions that all variable augmentation entries in row",
-              r,"be nonnegative. Assumptions added:","\n"+nonneg.toString());
-          amgr.addNecessaryAssumptions( nonneg );
+              r, "be nonnegative. Assumptions added:","\n"+nonneg.toString());
+          amgr.addNecessaryAssumptions(nonneg);
         }
         */
       }
     }
     discardRows(discard);
     if (remainingRows.size() > 0) {
-      logger.log(Level.ALL,"The rows still remaining to be processed are:\n",remainingRows);
+      logger.log(Level.ALL, "The rows still remaining to be processed are:\n",remainingRows);
     }
   }
 
@@ -384,7 +375,7 @@ public class PivotRowHandler {
     AssumptionSet aset = new AssumptionSet();
     for (int j = augStart; j < n; j++) {
       if (codes[r][j] == 2) {
-        aset.add( new Assumption(mat.getEntry(r, j), AssumptionType.NONNEGATIVE) );
+        aset.add(new Assumption(mat.getEntry(r, j), AssumptionType.NONNEGATIVE));
       }
     }
     return aset;
@@ -395,15 +386,15 @@ public class PivotRowHandler {
 
   private Set<AssumptionSet> secondPass() {
     logger.log(Level.ALL, "Second pass: processing remaining rows:",remainingRows);
-    Set<AssumptionSet> asetset = new HashSet<AssumptionSet>();
+    Set<AssumptionSet> asetset = new HashSet<>();
     // Build option table.
     OptionTable optionTable = buildOptionTable();
-    logger.log(Level.ALL,"Built option table:","\n"+optionTable.toString());
+    logger.log(Level.ALL, "Built option table:","\n"+optionTable.toString());
     // First step: for those rows that only have a single option, take those "options".
     AssumptionSet soleOpAset = optionTable.takeSoleOptions();
     // Next ... TODO
     if (optionTable.getRemainingRows().size() > 0) {
-      logger.log(Level.FINEST,"Not all rows satisfied on second pass! Unsatisfied rows:",remainingRows);
+      logger.log(Level.FINEST, "Not all rows satisfied on second pass! Unsatisfied rows:",remainingRows);
     }
     // For now we return just the soleOpAset, to see test our progress.
     asetset.add(soleOpAset);
@@ -423,11 +414,11 @@ public class PivotRowHandler {
     // as necessary assumptions.
     AssumptionSet aset = opman.getSoleOptionRowsAssumptions();
     if (aset.size() > 0) {
-      logger.log(Level.ALL,"Some of the remaining rows have just a single option.",
+      logger.log(Level.ALL, "Some of the remaining rows have just a single option.",
           "Taking those options yields the new assumptions:\n",aset);
       amgr.addNecessaryAssumptions(aset);
     } else {
-      logger.log(Level.ALL,"There were no remaining pivot rows having just a single option.");
+      logger.log(Level.ALL, "There were no remaining pivot rows having just a single option.");
     }
   }
 
@@ -442,24 +433,24 @@ public class PivotRowHandler {
 
     AssumptionSet aset = opman.nextTry();
     while (aset != null) {
-      logger.log(Level.ALL,"Trying to satisfy remaining pivot rows with set:\n",aset);
+      logger.log(Level.ALL, "Trying to satisfy remaining pivot rows with set:\n",aset);
       // Get a copy of the current assumption set.
       AssumptionSet curr = new AssumptionSet(amgr.getCurrentAssumptionSet());
-      logger.log(Level.ALL,"Current set is:\n",curr);
+      logger.log(Level.ALL, "Current set is:\n",curr);
       boolean consistent = curr.addAll(aset);
-      logger.log(Level.ALL,"Combined set is:\n",curr);
+      logger.log(Level.ALL, "Combined set is:\n",curr);
       // Is the next try from opman consistent with the current assumption set?
       if (!consistent) {
         // If not, go to the next try.
-        logger.log(Level.ALL,"This set was inconsistent.");
+        logger.log(Level.ALL, "This set was inconsistent.");
       } else {
         // It is consistent. So now we ask Redlog whether it can find parameter values.
-        logger.log(Level.ALL,"The set is at least not immediately contradictory.",
+        logger.log(Level.ALL, "The set is at least not immediately contradictory.",
             "We ask Redlog if it is satisfiable.");
-        Map<String,Rational> map = balancer.tryAssumptionSet(curr);
+        Map<String, Rational> map = balancer.tryAssumptionSet(curr);
         if (map != null || balancer.redlogSaidTrue()) {
           // Success!
-          logger.log(Level.ALL,"The set is satisfiable!");
+          logger.log(Level.ALL, "The set is satisfiable!");
           successful = true;
           // FIXME: Instead of the next line, we should be adding these assumptions as
           // possibly unnecessary. We cannot yet do that, because AssumptionManager is not
@@ -474,7 +465,7 @@ public class PivotRowHandler {
     }
     if (!successful) {
       // There was no way to satisfy the pivot rows and get parameter values, so we have to backtrack.
-      logger.log(Level.ALL,"There was no way to satisfy the remaining rows.");
+      logger.log(Level.ALL, "There was no way to satisfy the remaining rows.");
       throw new BadAssumptionsException();
     }
     // If we were successful, then we just return. The successful assumption set is in amgr.
@@ -485,7 +476,7 @@ public class PivotRowHandler {
     opman = new OptionManager(logger);
     // Add the usable columns.
     for (Integer c : CU) {
-      UsableColumn u = new UsableColumn(mat,c,logger);
+      UsableColumn u = new UsableColumn(mat, c, logger);
       opman.addUsableColumn(u, c);
     }
     // Create the augmentation column.
@@ -505,7 +496,7 @@ public class PivotRowHandler {
     // Tell each one which are its usable columns.
     for (Integer r : remainingRows) {
       // Create and add.
-      PivotRow pr = new PivotRow(r,logger);
+      PivotRow pr = new PivotRow(r, logger);
       opman.addPivotRow(pr);
       // Assign usable columns.
       for (Integer c : CU) {
@@ -533,7 +524,7 @@ public class PivotRowHandler {
       // Now assess the augmentation entries.
       table[i][augStart] = (EXar3(i) ? 5 : 4);
     }
-    return new OptionTable(this,mat,table,remainingRows,CU,logger);
+    return new OptionTable(this, mat, table, remainingRows, CU, logger);
   }
 
   //-----------------------------------------------------------------
